--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
      		<p>Текст с парой слов о себе.</p>
       		<h3>Чем могу быть полезен</h3>
       		<p>Текст о том, чем могу быть полезен.</p>
+          <div class="skills">
+            <h3>Мои навыки</h3>
+            <dl class="skills-list">
+              <dt class="skills-html" style="width:60%;">HTML</dt>
+              <dd><div>60%</div>></dd>
+              <dt class="skills-css" style="width:20%;">CSS</dt>
+              <dd><div>20%</div>></dd>
+              <dt class="skills-js" style="width:1%;">JS</dt>
+              <dd><div>1%</div>></dd>
+            </dl>
+          </div>
     	</section>
 
    		<section class="portfolio">
