Доделал раздел мои навыки
Исправление ошибок в коде

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
           <div class="skills">
             <h3>Мои навыки</h3>
             <dl class="skills-list">
-              <dt class="skills-html" style="width:60%;">HTML</dt>
-              <dd><div>60%</div>></dd>
-              <dt class="skills-css" style="width:20%;">CSS</dt>
-              <dd><div>20%</div>></dd>
-              <dt class="skills-js" style="width:1%;">JS</dt>
-              <dd><div>1%</div>></dd>
+              <dt class="skill-html">HTML</dt>
+              <dd class="level"><div style="width: 60%;">60%</div></dd>
+              <dt class="skill-css">CSS</dt>
+              <dd class="level"><div style="width:20%;">20%</div>></dd>
+              <dt class="skill-js">JS</dt>
+              <dd class="level"><div style="width:1%;">1%</div>></dd>
             </dl>
           </div>
     	</section>
